--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/user
-JWT_SECRET=secret
+JWT_SECRET=your secret-key
 EMAIL=your email id(from which you want to send mail)
 PASSWORD=add your 16 digit password (it's created by gmail)
 BASE_URL=http://localhost:5000
